Added pagination to Categories::Index. Updated associated Jbuilder views. Fixed schemas and tests for Categories.
