# app/controllers/v1/categories_controller.rb
@@ -3,12 +3,11 @@
 module V1
   class CategoriesController < ApplicationController
     def index
-      # @categories = Category.all
       @categories = Categories::Index.call(params:)
     end
 
     def show
-      render json: Categories::Show.call(params:)
+      @category = Categories::Show.call(params:)
     end
   end
 end
