# swagger/v1/swagger.yaml
@@ -1,61 +1,118 @@
----
-openapi: 3.0.1
-info:
-  title: API V1
-  version: v1
-components:
-  schemas:
-    categories:
-      type: array
-      items:
-        "$ref": "#/components/schemas/category"
-    category:
-      type: object
-      properties:
-        id:
-          type: string
-          format: uuid
-          example: 123e4567-e89b-12d3-a456-426614174000
-        name:
-          type: string
-        slug:
-          type: string
-        parent_id:
-          type: string
-          nullable: true
-        created_at:
-          type: string
-          format: date-time
-        updated_at:
-          type: string
-          format: date-time
-      required:
-      - id
-      - name
-      - slug
-      - created_at
-      - updated_at
-paths:
-  "/v1/categories":
-    get:
-      summary: list categories
-      responses:
-        '200':
-          description: successful
-  "/v1/categories/{id}":
-    parameters:
-    - name: id
-      in: path
-      required: true
-      schema:
-        type: string
-    get:
-      summary: show category
-      responses:
-        '200':
-          description: successful
-servers:
-- url: http://{defaultHost}
-  variables:
-    defaultHost:
-      default: localhost:3400
+{
+  "openapi": "3.0.1",
+  "info": {
+    "title": "API V1",
+    "version": "v1"
+  },
+  "components": {
+    "schemas": {
+      "category": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid",
+            "example": "123e4567-e89b-12d3-a456-426614174000"
+          },
+          "name": {
+            "type": "string"
+          },
+          "slug": {
+            "type": "string"
+          },
+          "parent": {
+            "type": "string",
+            "nullable": true
+          },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
+          }
+        },
+        "required": [
+          "id",
+          "name",
+          "slug",
+          "created_at",
+          "updated_at"
+        ]
+      },
+      "categories_response": {
+        "type": "object",
+        "properties": {
+          "categories": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/category"
+            }
+          },
+          "categories_info": {
+            "type": "object",
+            "properties": {
+              "current_page": "integer",
+              "total_pages": "integer",
+              "records": "integer",
+              "total_records": "integer"
+            },
+            "required": [
+              "current_page",
+              "total_pages",
+              "records",
+              "total_records"
+            ]
+          },
+          "required": [
+            "categories",
+            "categories_info"
+          ]
+        }
+      }
+    }
+  },
+  "paths": {
+    "/v1/categories": {
+      "get": {
+        "summary": "list categories",
+        "responses": {
+          "200": {
+            "description": "categories found"
+          }
+        }
+      }
+    },
+    "/v1/categories/{id}": {
+      "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "required": true,
+          "schema": {
+            "type": "string"
+          }
+        }
+      ],
+      "get": {
+        "summary": "show category",
+        "responses": {
+          "200": {
+            "description": "successful"
+          }
+        }
+      }
+    }
+  },
+  "servers": [
+    {
+      "url": "http://{defaultHost}",
+      "variables": {
+        "defaultHost": {
+          "default": "localhost:3400"
+        }
+      }
+    }
+  ]
+}
